Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 2,698
    • Issues 2,698
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 910
    • Merge requests 910
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • Mesa
  • mesamesa
  • Issues
  • #3969
Closed
Open
Created Dec 12, 2020 by Andrew Randrianasulu@randrianasulu

mesa git started to break wine + UnrealTournament.exe (old dx6 game)

I was trying to test new mesa with my usual array of wine benchmarks and games and noticed wine started to abort after I updated mesa from ~ 4 nov 2020 to ~12.12.2020.

Currently running git bisect, results so far:

git bisect log
git bisect start
# good: [638ebdea78e67d19dda1ac6d2ea5a7c89e5b8d05] glx: get rid of memory leak
git bisect good 638ebdea78e67d19dda1ac6d2ea5a7c89e5b8d05
# bad: [41f7fa273d21566d82a6376fb3ad4e44c5e57d33] lavapipe: add support for VK_KHR_descriptor_update_template
git bisect bad 41f7fa273d21566d82a6376fb3ad4e44c5e57d33
# good: [97ebb896afb6801d1fcd69556583975411379998] intel/compiler: Do interpolateAtOffset coordinate scaling in NIR
git bisect good 97ebb896afb6801d1fcd69556583975411379998
# good: [37226269d375d3ec4d48a20c019ea9b4667f79a3] etnaviv/drm: add some locking asserts
git bisect good 37226269d375d3ec4d48a20c019ea9b4667f79a3
# bad: [5bb75385259f8c7492d755b1b58e38f47df487bf] Revert "clover: Support LLVM coming from CMake instead of config-tool"
git bisect bad 5bb75385259f8c7492d755b1b58e38f47df487bf

sight, git bisect noticed my reverts needed for clover linking on my system :/

but at least I have some pointers (compilation a bit slow on this machine, ~ hour for full mesa build, don't want to alter build flags for minimizing uncertanity).

wine error looks like this:

wine UnrealTournament.exe
WARNING: lavapipe is not a conformant vulkan implementation, testing use only.
WARNING: lavapipe is not a conformant vulkan implementation, testing use only.
00bc:err:ntoskrnl:ZwLoadDriver failed to create driver L"\\Registry\\Machine\\System\\CurrentControlSet\\Services\\zntport": c0000142
003c:fixme:service:scmdatabase_autostart_services Auto-start service L"zntport" failed to start: 1114
0024:fixme:ntdll:NtQuerySystemInformation info_class SYSTEM_PERFORMANCE_INFORMATION
0024:fixme:process:GetProcessWorkingSetSizeEx (FFFFFFFF,0031F40C,0031F404,00000000): stub
0024:err:winediag:wined3d_dll_init Setting multithreaded command stream to 0.
X Error of failed request:  GLXBadFBConfig
  Major opcode of failed request:  155 (GLX)
  Minor opcode of failed request:  0 ()
  Serial number of failed request:  434
  Current serial number in output stream:  434
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking